<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_contact"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/saveButton"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/button_bg"
                android:text="@string/save"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_marginTop="50dp"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/grey"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/fields_bg"
            android:layout_marginBottom="20dp"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/grey"/>
        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/fields_bg"
            android:layout_marginBottom="20dp"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/grey"/>
        <EditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/fields_bg"
            android:layout_marginBottom="20dp"
            android:paddingStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_mobile"
            android:textSize="14sp"
            android:layout_marginLeft="8dp"
            android:textColor="@color/grey"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/fields_bg"
            android:layout_marginBottom="20dp"
            android:paddingStart="10dp"
            android:inputType="number"/>


    </LinearLayout>
</layout>