<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@drawable/list_item_bg"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/edit"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icons_edit"
                android:layout_gravity="center_vertical"
                android:tint="@color/white"
                android:layout_alignParentEnd="true"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/john_smit"
                    android:textSize="22sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium" />

                <TextView
                    android:id="@+id/profession"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business_consultant"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif"
                    android:layout_marginBottom="20dp"/>
            </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/baseline_call_24"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="3dp"
                android:tint="@color/white"/>

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_91_6267850213"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/email"
            android:layout_gravity="center_vertical"
            android:tint="@color/white"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/akshitabhandari_dev_gmail_com"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    </LinearLayout>
</layout>